[package]
name = "timeknight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.13" }
ansi_term = { version = "0.12.1" }
dirs = { version = "4.0.0" }

[[bin]]
name = "timek"
path = "src/main.rs"
