[package]
name = "timeknight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features=["std", "clock"] }
clap = { version = "4" }
dirs = { version = "4" }
console = "0.15.0"
itertools = "0.10.3"

[[bin]]
name = "timek"
path = "src/main.rs"
